5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1684_1105.log
== TEST (2019-04-22 18:29:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("escreva a descricao do brasao: ")
print ("Entrada: ", a)
if (a == lobo):
	print ("Stark")
elif (a == leao):
	print ("Lannister")
elif (a == veado):
	print ("Baratheon")
elif (a == dragao):
	print ("Targaryen")
elif (a == rosa):
	print ("Tyrell")
elif (a == sol):
	print ("Martell")
elif ( a == lula):
	print ("Greyjoy")
elif (a == esfolado):
	print ("Bolton")
elif (a == turta):
	print ("Tully")
else:
	print ("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (a == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:33:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("escreva a descricao do brasao: ")
print ("Entrada: ", a)
if (a == lobo):
	print ("Casa: Stark")
elif (a == leao):
	print ("Casa: Lannister")
elif (a == veado):
	print ("Casa: Baratheon")
elif (a == dragao):
	print ("Casa: Targaryen")
elif (a == rosa):
	print ("Casa: Tyrell")
elif (a == sol):
	print ("Casa: Martell")
elif ( a == lula):
	print ("Casa: Greyjoy")
elif (a == esfolado):
	print ("Casa: Bolton")
elif (a == turta):
	print ("Casa: Tully")
else:
	print ("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (a == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:34:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("escreva a descricao do brasao: ")
print ("Entrada: ", a)
if (a == "lobo"):
	print ("Casa: Stark")
elif (a == "leao"):
	print ("Casa: Lannister")
elif (a == "veado"):
	print ("Casa: Baratheon")
elif (a == "dragao"):
	print ("Casa: Targaryen")
elif (a == "rosa"):
	print ("Casa: Tyrell")
elif (a == "sol"):
	print ("Casa: Martell")
elif ( a == "lula"):
	print ("Casa: Greyjoy")
elif (a == "esfolado"):
	print ("Casa: Bolton")
elif (a == "turta"):
	print ("Casa: Tully")
else:
	print ("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:35:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("escreva a descricao do brasao: ")
print ("Entrada: ", a)
if (a == "lobo"):
	print ("Casa: Stark")
elif (a == "leao"):
	print ("Casa: Lannister")
elif (a == "veado"):
	print ("Casa: Baratheon")
elif (a == "dragao"):
	print ("Casa: Targaryen")
elif (a == "rosa"):
	print ("Casa: Tyrell")
elif (a == "sol"):
	print ("Casa: Martell")
elif ( a == "lula"):
	print ("Casa: Greyjoy")
elif (a == "esfolado"):
	print ("Casa: Bolton")
elif (a == "turta"):
	print ("Casa: Tully")
else:
	print ("Brasao invalido")
-- EXECUTION TIME:
0.148301
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
